--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-streamlit
-python-dotenv
-langchain-openai
-langchain-core
-langchain-community
-langchain-text-splitters
-weaviate-client>=4.0.0
-langchain-weaviate
-pypdf
-wikipedia 
+streamlit>=1.26.0,<2.0.0
+python-dotenv>=1.0.0,<2.0.0
+langchain-openai>=0.0.5,<0.1.0
+langchain-core>=0.1.10,<0.4.0
+langchain-text-splitters>=0.0.1,<0.1.0
+langchain-community>=0.0.13,<0.1.0
+langchain-weaviate>=0.0.1,<0.1.0
+weaviate-client>=4.0.0,<5.0.0
+pydantic>=2.5.2,<3.0.0
+pypdf>=3.15.1,<4.0.0
+wikipedia>=1.4.0,<2.0.0
