--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: streamlit
-        image: gcr.io/${GCP_PROJECT_ID}/streamlit-app:latest
+        image: gcr.io/sacred-entry-448804-b0/streamlit-app:latest
         env:
         - name: OPENAI_API_KEY
           valueFrom:
